# fin_opus

./: .env.example  .gitignore  CLAUDE.md  Makefile  PROGRESS.md  README.md  blueprint_system_decyzyjny_GPW.md  pyproject.toml
.claude/: launch.json
app/: __init__.py  backup.py  cli.py  config.py  db.py  scheduler.py  status.py
app/alerts/: __init__.py  digest.py  healthcheck.py  monitor.py  telegram.py
app/backtest/: __init__.py  ab_harness.py  engine.py  fills.py  mc_benchmark.py  metrics.py  validation.py
app/features/: compute.py  cross_sectional.py  fundamentals.py  regime.py
app/ingestion/: collect_news.py  demo.py  filings_db.py  gpw_archive.py  intraday.py  news_collector.py  provenance.py  quality.py  refdata.py  stooq.py
app/llm/: __init__.py  client.py  evalset.py  pipeline.py  research.py  schemas.py  synthesis.py
app/logging/: __init__.py  decisions.py
app/paper/: __init__.py  loop.py  store.py
app/risk/: __init__.py  manager.py
app/strategy/: __init__.py  engine.py
app/users/: profiles.py
app/web/: __init__.py  (+2 more)
config/: backtest.yaml  backup.yaml  corporate_actions.yaml  data_quality.yaml  index_membership.yaml  intraday.yaml  llm.yaml  news_sources.yaml  profiles.yaml  schedule.yaml  universe.yaml
docs/: jak-dziala-aplikacja.md  kill_criteria.md  mapa-repozytorium.md  odpowiedzi-2026-07-22.md  plan-llm-expansion.md  plan-okno-7-19.md  plan-window-7-19.md  strategy-library.md
ops/: pl.finopus.daemon.plist
scripts/: cloc.py
tests/: conftest.py  test_ab_harness.py  test_backup.py  test_benchmark_alignment.py  test_cli_llm.py  test_collector_fixtures.py  test_corporate_actions.py  test_data_quality.py  test_dotenv.py  test_engine_accounting.py  test_entry_ranking.py  test_features.py  test_filings_processed.py  test_fill_timing.py  test_fills.py  test_full_universe.py  test_fundamentals.py  test_gpw_archive.py  test_index_membership.py  test_ingestion.py  test_integration.py  test_intraday.py  test_llm_client.py  test_llm_guardrails.py  test_llm_pipeline.py  test_llm_research.py  test_llm_schemas.py  test_llm_synthesis.py  test_logging_alerts.py  test_metrics.py  test_multitenant.py  test_news_collector.py  test_paper_loop.py  test_paper_parity.py  test_point_in_time.py  test_profiles.py  test_regime.py  test_risk.py  test_scaffold.py  test_scheduler.py  (+8 more)
(+39 files in other folders)
