[project]
name = "gpw-decision-system"
version = "0.1.0"
description = "Deterministic decision-support system for GPW (Warsaw Stock Exchange). Paper trading only."
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "requests>=2.31",
    "pyyaml>=6.0",
    "feedparser>=6.0",
    "apscheduler>=3.10",
    "jsonschema>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.setuptools.packages.find]
include = ["app*"]
