[project]
name = "gpw-decision-system"
version = "0.1.0"
description = "Deterministic decision-support system for GPW (Warsaw Stock Exchange). Paper trading only."
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "requests>=2.31",
    "pyyaml>=6.0",
    "feedparser>=6.0",
    "apscheduler>=3.10",
    "jsonschema>=4.0",
    "curl_cffi>=0.7",   # GPW archive sits behind a WAF: needs browser TLS impersonation
    "xlrd>=2.0",        # GPW session files are legacy BIFF .xls
    "flask>=3.0",       # read-only per-user web dashboard (app/web)
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
]
# R2/S3 uploads for `make backup` — install on the VPS: pip install -e ".[backup]"
# (tests inject a fake client, so boto3 is not needed for `make test`).
backup = [
    "boto3>=1.28",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.setuptools.packages.find]
include = ["app*"]
